# relay

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  funny.py  hello.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
.relay/: config.toml
.relay/tools/: test_tool.py
agent/: __init__.py  agent.py  events.py  session.py
client/: __init__.py  llm_client.py  response.py
config/: __init__.py  config.py  credentials.py  loader.py  oauth.py
context/: __init__.py  compaction.py  manager.py
docker/: Dockerfile  docker-compose.yml
hooks/: __init__.py  hook_system.py
prompts/: system.py
safety/: __init__.py  approval.py
scripts/: test_tool.py
tests/: conftest.py  test_agent_events.py  test_config.py  test_context_manager.py  test_credentials.py  test_errors.py  test_format.py  test_loader.py  test_paths.py  test_registry.py  test_response.py  test_system_prompt.py  test_text.py  test_tool_base.py
tools/: __init__.py  base.py  discovery.py  registry.py
tools/core/: __init__.py  directories.py  edit.py  edit_file.py  glob.py  grep.py  plan.py  read.py  read_file.py  shell.py  todo.py  write.py  write_file.py
tools/mcp/: client.py  manager.py  mcp_tool.py
tools/memory/: memory.py
tools/network/: fetch.py  web_fetch.py  web_search.py
tools/subagents/: subagents.py
ui/: __init__.py  app.py  format.py  logo.py  renderer.py  repl.py  stream.py  theme.py
utils/: __init__.py  errors.py  paths.py  text.py
